# collaborative-node-editor

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
crates/synapse-core/: Cargo.toml
crates/synapse-core/src/: error.rs  lib.rs  math.rs  quadtree.rs  types.rs  wasm.rs
src/: App.vue
src/components/: Canvas.vue  EdgeConnections.vue  Node.vue
src/composables/: useCanvasTransform.ts  useYjsCollaboration.ts
src/workers/: bridge.ts  synapse.worker.ts
