[package]
name = "synapse-core"
version = "2.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack]
wasm-opt = false

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Document",
    "Worker",
    "MessageEvent",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smallvec = "1.11"
parking_lot = "0.12"
thiserror = "1.0"

[dev-dependencies]
wasm-bindgen-test = "0.3"
